--- a/subpackages-comment/pages/comment/comment.wxml
+++ b/subpackages-comment/pages/comment/comment.wxml
@@ -1,20 +1,20 @@
-<wrapper nav-bar-class="theme-module-color" mode="comment" focus="{{inputFocus}}" will-reply-item="{{willReplyItem}}" input-value="{{inputValue}}" bindfocus="focusEvent" bindblur="blurEvent">
+<wrapper nav-bar-class="theme-module-color" mode="comment" focus="{{inputFocus}}" will-reply-item="{{willReplyItem}}" input-value="{{inputValue}}" bindfocus="focusEvent" bindblur="blurEvent" bindsendcomment="sendComment">
   <view slot="nav-bar-left" class="back-icon">
     <back-button />
   </view>
-  <view slot="nav-bar-middle" class="comment-title">评论(14959)</view>
+  <view slot="nav-bar-middle" class="comment-title">评论({{commentData.replyCount}})</view>
   <button open-type="share" plain slot="nav-bar-right" class="share-button">
     <i-icon type="share" size="25" color="#888" />
   </button>
   <scroll-view scroll-y slot="content" class="theme-module-color content-container">
     <!--歌曲card-->
     <view class="music-card" wx:if="{{flag==2}}" catchtap="goToMusicPlayPage">
-      <song-list-item is-action-icon icon="enter" src-url="{{singInfo.cover}}" top-title="{{singInfo.singName}}" bottom-title="{{singInfo.singerName}}"/>
+      <song-list-item is-action-icon icon="enter" src-url="{{songInfo.cover}}" top-title="{{songInfo.singName}}" bottom-title="{{songInfo.singerName}}"/>
     </view>
     <!--评论item-->
     <view wx:for="{{commentData}}" wx:key="id" class="comment-item">
       <comment-item  bindshowreply="showReply" reply-count="{{item.replyCount}}" reply-from-info="{{item.replyFromInfo}}" comment-date="{{item.commentDate}}" comment="{{item.comment}}" user-name="{{item.userName}}" up-count="{{item.upCount}}"
-      avator="{{item.avator}}" is-up="{{item.isUp}}" item-id="{{index}}" bindtapitem="tapItem" isFocus="{{inputFocus}}"/>
+      avator="{{item.avator}}" is-up="{{item.isUp}}" data-id="{{index}}" item-id="{{item.id}}" bindtapitem="tapItem" isFocus="{{inputFocus}}"/>
     </view>
   </scroll-view>
 </wrapper>
@@ -27,12 +27,12 @@
   <view slot="content">
     <view class="user-comment theme-module-color theme-padding">
       <comment-item is-show-border="{{false}}" reply-from-info="{{replyComment.replyFromInfo}}" comment-date="{{replyComment.commentDate}}" comment="{{replyComment.comment}}" user-name="{{replyComment.userName}}" up-count="{{replyComment.upCount}}" avator="{{replyComment.avator}}"
-        is-up="{{replyComment.isUp}}" item-id="{{replyComment.id}}" bindtapitem="tapItem" is-top isFocus="{{inputFocus}}"/>
+        is-up="{{replyComment.isUp}}" data-id="{{replyComment.id}}" item-id="{{replyComment.id}}" bindtapitem="tapItem" is-top isFocus="{{inputFocus}}"/>
       <view class="all-reply-title">全部回复</view>
     </view>
     <scroll-view class="all-reply theme-module-color" scroll-y>
       <comment-item wx:for="{{replyData}}" wx:key="id" reply-count="{{item.replyCount}}" reply-from-info="{{item.replyFromInfo}}" comment-date="{{item.commentDate}}" comment="{{item.comment}}" user-name="{{item.userName}}" up-count="{{item.upCount}}" avator="{{item.avator}}"
-        is-up="{{item.isUp}}" item-id="{{index}}" bindtapitem="tapItem" isFocus="{{inputFocus}}" />
+        is-up="{{item.isUp}}" data-id="{{index}}" item-id="{{item.id}}" bindtapitem="tapItem" isFocus="{{inputFocus}}" />
     </scroll-view>
   </view>
 </bottom-modal>
